Implement functions of Create and Delete Users
