# service/userservice.go
@@ -2,12 +2,15 @@ package service
 
 import (
 	"gochat/models"
+	"strconv"
+	"time"
 
 	"github.com/gin-gonic/gin"
 )
 
 // GetUserList
-// @Tags 首页
+// @Summary 所有用户
+// @Tags 用户模块
 // @Success 200 {string} json{"code","message"}
 // @Router /user/getUserList [get]
 func GetUserList(c *gin.Context) {
@@ -15,5 +18,50 @@ func GetUserList(c *gin.Context) {
 	data = models.GetUserList()
 	c.JSON(200, gin.H{
 		"message": data,
+	})
+}
+
+// CreateUser
+// @Summary 新增用户
+// @Tags 用户模块
+// @param name query string false "用户名"
+// @param password query string false "密码"
+// @param repassword query string false "确认密码"
+// @Success 200 {string} json{"code","message"}
+// @Router /user/createUser [get]
+func CreateUser(c *gin.Context) {
+	user := models.UserBasic{}
+	user.Name = c.Query("name")
+	password := c.Query("password")
+	repassword := c.Query("repassword")
+	if password != repassword {
+		c.JSON(4000327, gin.H{
+			"message": "两次密码不一致！",
+		})
+	} else {
+		user.Password = password
+	}
+	user.LogInTime = time.Now()
+	user.HeartbeatTime = time.Now()
+	user.LogOutTime = time.Now()
+	models.CreateUser(user)
+	c.JSON(200, gin.H{
+		"message": "添加用户成功！",
+	})
+}
+
+// DeleteUser
+// @Summary 删除用户
+// @Tags 用户模块
+// @param id query string false "ID"
+// @Success 200 {string} json{"code","message"}
+// @Router /user/deleteUser [get]
+func DeleteUser(c *gin.Context) {
+	user := models.UserBasic{}
+	id, _ := strconv.Atoi(c.Query("id"))
+	user.ID = uint(id)
+	models.DeleteUser(user)
+	c.JSON(200, gin.H{
+		"message": "删除用户成功！",
 	})
 }
